--- a/css/sign.css
+++ b/css/sign.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;    
 }
 
 header {
     width: 100%; 
     height: 100vh;
-    background-color: #38ffd7;
+    background-color: #e3187a;
 }
 
 nav {
@@ -44,7 +44,8 @@ nav .menu a {
     box-sizing: border-box;
     border: 2px solid black;
     width: 90%;
-    background-color: whitesmoke;
+    background-image: url(/images/back.jpg);
+    background-repeat: no-repeat;
     height: 80%;
     margin: 25px 0px 0px 70px;
     border-radius: 50px;   
@@ -54,6 +55,120 @@ nav .menu a {
     margin-top: 20px;
 }
 hr {
-    margin-top: 10px;
-    height: 10%;
+    height: 4px;
+    background-color: #000;
+}
+label {
+    margin-left: 250px;
+}
+input[type="text"] {
+    width: 50%;
+    height: 5vh;
+    margin-top: 20px;
+    margin-left: 25px;
+    border-radius: 7px;
+    border: 1px solid rgb(13, 7, 7);
+    background-color: rgb(49, 236, 177);
+    font-size: 18px;
+}
+input[type="email"] {
+    width: 50%;
+    height: 5vh;
+    margin-top: 20px;
+    margin-left: 25px;
+    border-radius: 7px;
+    border: 1px solid rgb(13, 7, 7);
+    background-color: rgb(49, 236, 177);
+    font-size: 18px;
+}
+.pass {
+    width: 50%;
+    height: 5vh;
+    margin-top: 20px;
+    margin-left: 2px;
+    border-radius: 7px;
+    border: 1px solid rgb(13, 7, 7);
+    background-color: rgb(49, 236, 177);
+    font-size: 18px;
+}
+.cpass{
+    width: 42%;
+    height: 5vh;
+    margin-top: 20px;
+    margin-left: 25px;
+    border-radius: 7px;
+    border: 1px solid rgb(13, 7, 7);
+    background-color: rgb(49, 236, 177);
+    font-size: 18px;
+}
+input[type="tel"] {
+    width: 50%;
+    height: 5vh;
+    margin-top: 20px;
+    margin-left: 2px;
+    border-radius: 7px;
+    border: 1px solid rgb(13, 7, 7);
+    background-color: rgb(49, 236, 177);
+    font-size: 18px;
+}
+input[type="button"] {
+    width: 10%;
+    height: 5vh;
+    transition: all 1s ease;
+    border-radius: 7px;
+    border: 1px solid rgb(13, 7, 7);
+    background-color: rgb(49, 236, 177);
+    font-size: 18px;
+}
+input[type="button"]:hover {
+    background-color: #000;
+    color: #fff;
+}
+input[type="date"] {
+    width: 51%;
+    height: 5vh;
+    margin-top: 20px;
+    margin-left: 25px;
+    border-radius: 7px;
+    border: 1px solid rgb(13, 7, 7);
+    background-color: rgb(49, 236, 177);
+    font-size: 18px;
+}
+input[type="checkbox"] {
+    width: 5%;
+    height: 3vh;
+    margin-top: 20px;
+    margin-left: 230px;
+    border-radius: 7px;
+    border: 1px solid rgb(13, 7, 7);
+    background-color: rgb(49, 236, 177);
+}
+button[type="submit"] {
+    width: 10%;
+    height: 5vh;
+    margin-top: 20px;
+    margin-left: 450px;
+    border-radius: 7px;
+    transition: all 1s ease;
+    background-color: rgb(49, 236, 177);
+    font-size: 18px;
+}
+button[type="reset"] {
+    width: 10%;
+    height: 5vh;
+    margin-top: 20px;
+    margin-left: 25px;
+    border-radius: 7px;
+    transition: all 1s ease;
+    background-color: rgb(49, 236, 177);
+    font-size: 18px;
+}
+button:hover {
+    background-color: #000;
+    color: aliceblue;
+
+}
+a {
+    text-decoration: none;
+    color: #000;
 }
