--- a/css/sign.css
+++ b/css/sign.css
@@ -7,13 +7,13 @@
 
 header {
     width: 100%; 
-    height: 100vh;
+    height: 110vh;
     background-color: #e3187a;
 }
 
 nav {
     width: 100%;
-    height: 15vh;
+    height: 12vh;
     background-color: rgba(0,0,0,0.2);
     color: aliceblue;
     text-transform: uppercase;
@@ -105,16 +105,7 @@ input[type="tel"] {
     width: 50%;
     height: 5vh;
     margin-top: 20px;
-    margin-left: 2px;
-    border-radius: 7px;
-    border: 1px solid rgb(13, 7, 7);
-    background-color: rgb(49, 236, 177);
-    font-size: 18px;
-}
-input[type="button"] {
-    width: 10%;
-    height: 5vh;
-    transition: all 1s ease;
+    margin-left: 0px;
     border-radius: 7px;
     border: 1px solid rgb(13, 7, 7);
     background-color: rgb(49, 236, 177);
@@ -133,15 +124,6 @@ input[type="date"] {
     border: 1px solid rgb(13, 7, 7);
     background-color: rgb(49, 236, 177);
     font-size: 18px;
-}
-input[type="checkbox"] {
-    width: 5%;
-    height: 3vh;
-    margin-top: 20px;
-    margin-left: 230px;
-    border-radius: 7px;
-    border: 1px solid rgb(13, 7, 7);
-    background-color: rgb(49, 236, 177);
 }
 button[type="submit"] {
     width: 10%;
@@ -167,6 +149,9 @@ button:hover {
     background-color: #000;
     color: aliceblue;
 
+}
+p {
+    margin-left: 270px;
 }
 a {
     text-decoration: none;
